--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,4 +1,5 @@
 <ul>
+    <a href="/home"><span class="logo"><li>MealMaster</li></span></a>
     <a href="/home"><li <%if(active=="Home"){%>class="active"<%}%> >Home</li></a>
     <a href="/plan" ><li <%if(active=="Plan"){%>class="active"<%}%> >Plan</li></a>
     <a href="/basket"><li <%if(active=="Basket"){%>class="active"<%}%> >Basket</li></a>
