--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -22,14 +22,11 @@
 
 </head>
 <body>
-    <header>
-        <h1>MealMaster</h1>
-    </header>
     <nav>
         <%- include('./navbar.ejs', {active: "Basket"}); %>
     </nav>
 
-
+    <h1>My Basket</h1>
     <div id="calendar_area">
         <div class="week">Week
         </div>
