--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,15 +13,12 @@
 </head>
 <body>
 
-<header>
-    <h1>MealMaster</h1>
-</header>
 <nav>
     <%- include('./navbar.ejs', {active: "Home"}); %>
 
 </nav>
 
-
+<h1>Home</h1>
 <div id="meals" class="item_section">
     <h2>Meals</h2>
     <a href="/meals">View all</a>
