--- a/views/plan.ejs
+++ b/views/plan.ejs
@@ -47,14 +47,11 @@
 </head>
 <body>
 
-<header>
-    <h1>MealMaster</h1>
-</header>
 <nav>
     <%- include('./navbar.ejs', {active: "Plan"}); %>
 
 </nav>
-
+<h1>My Plan</h1>
 <div id="plan">
     <h2>Plan</h2>
     <button onclick="removeAll()">Clear</button>
