add new meal popup front end only

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -159,3 +159,39 @@ footer *{
     background-color: rgba(226, 147, 91, 0.81);
     color: white;
 }
+
+.popup-form{
+    display: none;
+    width: 50%;
+    height: fit-content;
+    margin: 15% 25% auto 25%;
+    position: fixed;
+    background-color: #fefefe;
+    padding: 10px;
+    border-radius: 25px;
+    border-style: solid;
+    line-height: 2em;
+}
+
+form *{
+    display: block;
+    margin-top: 1em;
+}
+
+form button{
+    border-radius: 5px;
+    display: inline-block;
+    color: rgb(118,144,76);
+    background-color: rgb(243,243,245);
+    text-decoration: none;
+    border: none;
+    text-align: center;
+    font-size: 1em;
+    padding: 10px;
+    border-width: 1px;
+
+}
+
+form button:hover{
+    background-color: rgb(183,206,164);
+}
