--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -110,10 +110,7 @@ body{
     margin: 0;
 }
 
-.item_section a{
-    grid-row: 1;
-    grid-column: 2;
-}
+
 
 @media screen and (min-width: 1300px){
     .item_section {
@@ -124,9 +121,6 @@ body{
         grid-column: 1/span 2;
     }
 
-    .item_section a{
-        grid-column: 3;
-    }
 
 }
 
@@ -139,9 +133,6 @@ body{
         grid-column: 1/span 3;
     }
 
-    .item_section a{
-        grid-column: 4;
-    }
 
 }
 img:hover {
@@ -155,6 +146,7 @@ img:hover {
     padding: 0px;
     border: 2px;
     border-color: rgba(32,31,29,0.7);
+    cursor: pointer;
 }
 
 .img_wrap img{
@@ -181,3 +173,7 @@ img:hover {
     background-color: #f1f1f1;
 }
 
+form #description{
+    height:8em;
+    width: 80%;
+}
