--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,10 +17,9 @@
     <label>password: </label>
     <input type="password" name="password" id="password"/>
     <input onclick="login()" type="button" value="Enter" class="button"/>
+    <a href="/">Not yet a member?</a>
 
 </form>
-
-<p id="output"></p>
 
 </body>
 </html>
