--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -174,6 +174,60 @@ img:hover {
 }
 
 form #description{
-    height:8em;
-    width: 80%;
+    height:12em;
+    width: 30em;
+}
+
+form li{
+    display: grid;
+    grid-template-columns: 2em auto;
+    grid-column-gap: 1em;
+}
+form ul,li{
+    margin: 0;
+    padding: 0;
+}
+
+form .comp-qty,.comp-name{
+    display: block;
+    padding: 5px 10px 5px 10px;
+    margin: 0;
+    line-height: 1em;
+}
+
+.comp-qty{
+    grid-column: 1;
+}
+
+.comp-name{
+    grid-column: 2;
+}
+
+
+.dropdown-item{
+    margin: 0;
+    cursor: pointer;
+    width: 200px;
+}
+
+#ingredient-name-input{
+    width:200px;
+}
+
+.dropdown-item:hover{
+    background-color: rgba(136, 136, 136, 0.35);
+}
+
+#add-component-form{
+    width: 40%;
+    min-width: fit-content;
+    margin: 30% 30% auto 30%;
+}
+
+#add-component-qty, #new-ingredient-shelf-life{
+    width:3em;
+}
+
+form input[type=url]{
+    width:300px;
 }
