--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css">
+
     <link rel="stylesheet" href="../public/styles/style.css" type="text/css">
     <link rel="stylesheet" href="../public/styles/basket.css" type="text/css">
+
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -20,6 +24,10 @@
 
     <script src="public/scripts/basket.js"></script>
 
+
+
+
+
 </head>
 <body>
     <nav>
@@ -28,7 +36,7 @@
 
     <h1>My Basket</h1>
     <div id="calendar_area">
-        <div class="week">Week
+        <div class="week">Ingredients
         </div>
         <table id="calendar">
             <tr>
@@ -52,7 +60,7 @@
         <div class="search_result">
             <table>
                 <tr ng-repeat="ingredient in ingredients | filter: searchBox" ng-if="$index < 10">
-                    <td><input type='button' value="+" id="button_{{ingredient.id}}" class="plus_button" /></td>
+                    <td><button id="button_{{ingredient.id}}" class="plus_button" data-balloon="Add to basket" data-balloon-pos="left" > + </button></td>
                     <td>{{ingredient.name}}</td>
                     <td><img src="{{ingredient.img}}" alt="{{ingredient.name}}"></td>
                 </tr>
