--- a/public/styles/basket.css
+++ b/public/styles/basket.css
@@ -1,59 +1,49 @@
-@import url('https://fonts.googleapis.com/css?family=Arimo:400,700|Homemade+Apple');
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
-
-html{
-    height: 100pc;
-    font-family:'Josefin Sans', sans-serif;
-
-
-}
-
 body{
-    background-color: rgb(253, 255, 246);
-    margin: 0;
     display: grid;
-    grid-template-columns: auto 60% 25%;
-    grid-template-rows: 240px 70px auto;
     grid-template-areas:
-                    "nav header header"
-                    "nav calendar search"
-                    "nav ingredients search";
+                    "nav header header header"
+                    "nav calendar calendar auto"
+                    "nav ingredients ingredients auto"
+                    "nav footer footer footer";
 }
 
-/*nav {*/
-    /*grid-area: nav;*/
-    /*background-color: rgba(226, 147, 91, 0.81); !* fix this colour*!*/
-    /*width: 10em;*/
-    /*font-family:'GlacialIndifferenceRegular', sans-serif;*/
-    /*font-weight: 700;*/
-    /*display: block;*/
-/*}*/
+@media screen and (min-width: 1300px){
+    .item_section {
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: 4em 18em;
+    }
+    .item_section h2 {
+        grid-column: 1/span 2;
+    }
+}
 
-/*nav a{*/
-    /*text-decoration: none;*/
-    /*color: white;*/
-/*}*/
+@media screen and (min-width: 1500px){
+    .item_section {
+        grid-template-columns: repeat(4, auto);
+        grid-template-rows: 4em 18em;
+    }
+    .item_section h2{
+        grid-column: 1/span 3;
+    }
+}
 
-/*nav ul{*/
-    /*padding: 0;*/
-    /*margin: 0;*/
-/*}*/
-/*nav li{*/
-    /*padding: 1em;*/
-    /*list-style-type: none;*/
-/*}*/
 
-/*nav li:hover{*/
-    /*background-color: rgba(255, 255, 255, 0.63);!* fix this colour*!*/
-/*}*/
+@media screen and (min-width: 550px){
+    body{
+        grid-template-areas:
+                "nav header      header      header"
+                "nav calendar    calendar    auto"
+                "nav ingredients ingredients auto"
+                "nav footer     footer  footer";
+    }
+}
 
-/*nav .active{*/
-    /*background-color: rgba(255, 255, 255, 0.63);*/
-/*}*/
-
+#ingredients_area {
+    grid-area: ingredients;
+}
 
 #ingredients {
-    grid-area: ingredients;
+    width: 100%;
     padding-top: 2em
 }
 
@@ -120,46 +110,46 @@ body{
     width:10%;
 }
 
-.search {
-    grid-area: search;
-    display:grid;
-    grid-template-rows:100px auto;
-    grid-template-areas:
-            "search_bar"
-            "search_result";
+/*.search {*/
+    /*grid-area: search;*/
+    /*display:grid;*/
+    /*grid-template-rows:100px auto;*/
+    /*grid-template-areas:*/
+            /*"search_bar"*/
+            /*"search_result";*/
 
-}
+/*}*/
 
-/* search area */
-.search_bar{
-    margin-left: 4em;
-    grid-area: search_bar;
-    width: 80%;
-}
+/*!* search area *!*/
+/*.search_bar{*/
+    /*margin-left: 4em;*/
+    /*grid-area: search_bar;*/
+    /*width: 80%;*/
+/*}*/
 
- /*Style the search field */
-.search_bar input[type=text] {
-    padding: 10px;
-    font-size: 17px;
-    border: 2px solid grey;
-    float: left;
-    width: 80%;
-    background: rgb(253, 255, 246);
+ /*!*Style the search field *!*/
+/*.search_bar input[type=text] {*/
+    /*padding: 10px;*/
+    /*font-size: 17px;*/
+    /*border: 2px solid grey;*/
+    /*float: left;*/
+    /*width: 80%;*/
+    /*background: rgb(253, 255, 246);*/
 
-}
+/*}*/
 
-/* Clear floats */
-.search_bar::after {
-    content: "";
-    clear: both;
-    display: table;
-}
+/*!* Clear floats *!*/
+/*.search_bar::after {*/
+    /*content: "";*/
+    /*clear: both;*/
+    /*display: table;*/
+/*}*/
 
-/* search result */
-.search_result {
-    grid-area: search_result;
-    margin-left: 4em;
-}
+/*!* search result *!*/
+/*.search_result {*/
+    /*grid-area: search_result;*/
+    /*margin-left: 4em;*/
+/*}*/
 
 
 /* button */
@@ -169,7 +159,6 @@ button {
     color: #ffffff;
     /*font-size: 1em;*/
     background: #307528;
-    /*padding: 20px 25px 19px 24px;*/
     text-decoration: none;
     font-weight: bold;
 }
@@ -184,15 +173,39 @@ button:hover {
     text-decoration: none;
 }
 
-.search_result td {
-    height: 3em;
+
+.w3-green:hover {
+    background: #4f8952;
+    background-image: -webkit-linear-gradient(top, #9bc495, #7ab073);
+    background-image: -moz-linear-gradient(top, #9bc495, #7ab073);
+    background-image: -ms-linear-gradient(top, #9bc495, #7ab073);
+    background-image: -o-linear-gradient(top, #9bc495, #7ab073);
+    background-image: linear-gradient(to bottom, #9bc495, #7ab073);
+    text-decoration: none;
 }
 
+.w3-red:hover{
+    background: #ff8080;
+    background-image: -webkit-linear-gradient(top, #ffb3b3,#ff9999);
+    background-image: -moz-linear-gradient(top, #ffb3b3, #ff9999);
+    background-image: -ms-linear-gradient(top, #ffb3b3, #ff9999);
+    background-image: -o-linear-gradient(top, #ffb3b3, #ff9999);
+    background-image: linear-gradient(to bottom, #ffb3b3, #ff9999);
+    text-decoration: none;
+}
 
-header h1{
+h1 {
     grid-area: header;
-    height: 15em;
-    font-family: 'Homemade Apple', cursive;
-    min-height: 15em;
-    margin: 67px;
 }
+/*.search_result td {*/
+    /*height: 3em;*/
+/*}*/
+
+
+/*header h1{*/
+    /*grid-area: header;*/
+    /*height: 15em;*/
+    /*font-family: 'Homemade Apple', cursive;*/
+    /*min-height: 15em;*/
+    /*margin: 67px;*/
+/*}*/
