--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -24,17 +24,17 @@
 
     <script src="public/scripts/basket.js"></script>
 
-
-
-
-
 </head>
+
 <body>
+
+
     <nav>
         <%- include('./navbar.ejs', {active: "Basket"}); %>
     </nav>
 
     <h1>My Basket</h1>
+
     <div id="calendar_area">
         <div class="week">Ingredients
         </div>
@@ -44,38 +44,45 @@
         </table>
     </div>
 
-
-    <table id="ingredients">
-        <tr></tr>
-    </table>
-
-
-
-    <div class="search" ng-app="search_ingredients">
-        <div class="search_bar">
-            <label>Add ingredients to your basket:</label>
-            <input type="text" class = "search" placeholder="Type in the ingredient.." name="search" ng-model="searchBox">
-        </div>
-
-        <div class="search_result">
-            <table>
-                <tr ng-repeat="ingredient in ingredients | filter: searchBox" ng-if="$index < 10">
-                    <td><button id="button_{{ingredient.id}}" class="plus_button" data-balloon="Add to basket" data-balloon-pos="left" > + </button></td>
-                    <td>{{ingredient.name}}</td>
-                    <td><img src="{{ingredient.img}}" alt="{{ingredient.name}}"></td>
-                </tr>
-            </table>
-        </div>
+    <div id="ingredients_area">
+        <table id="ingredients">
+            <tr></tr>
+        </table>
     </div>
 
-    <script>
-        var ingredients = <%- JSON.stringify(ingredients) %>;
-        angular.module("search_ingredients", [])
-            .run(function($rootScope){
-                $rootScope.ingredients = ingredients;
-            });
 
-    </script>
+
+
+    <!--<div class="search" ng-app="search_ingredients">-->
+        <!--<div class="search_bar">-->
+            <!--<label>Add ingredients to your basket:</label>-->
+            <!--<input type="text" class = "search" placeholder="Type in the ingredient.." name="search" ng-model="searchBox">-->
+        <!--</div>-->
+
+        <!--<div class="search_result">-->
+            <!--<table>-->
+                <!--<tr ng-repeat="ingredient in ingredients | filter: searchBox" ng-if="$index < 10">-->
+                    <!--<td><button id="button_{{ingredient.id}}" class="plus_button" data-balloon="Add to basket" data-balloon-pos="left" > + </button></td>-->
+                    <!--<td>{{ingredient.name}}</td>-->
+                    <!--<td><img src="{{ingredient.img}}" alt="{{ingredient.name}}"></td>-->
+                <!--</tr>-->
+            <!--</table>-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<script>-->
+        <!--var ingredients = <%- JSON.stringify(ingredients) %>;-->
+        <!--angular.module("search_ingredients", [])-->
+            <!--.run(function($rootScope){-->
+                <!--$rootScope.ingredients = ingredients;-->
+            <!--});-->
+
+    <!--</script>-->
+
+    <footer>
+        <%- include('./footer.ejs'); %>
+    </footer>
+
 
 </body>
 
