--- a/views/plan.ejs
+++ b/views/plan.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Plan | MealMaster</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="/public/styles/style.css" type="text/css">
     <link rel="stylesheet" href="/public/styles/plan.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Permanent+Marker" rel="stylesheet">
