--- a/public/styles/basket.css
+++ b/public/styles/basket.css
@@ -7,6 +7,17 @@ body{
                     "nav footer footer footer";
 }
 
+@media screen and (min-width: 550px){
+    body{
+        grid-template-areas:
+                "nav header      header      header"
+                "nav calendar    calendar    auto"
+                "nav ingredients ingredients auto"
+                "nav footer     footer  footer";
+    };
+
+}
+
 @media screen and (min-width: 1300px){
     .item_section {
         grid-template-columns: repeat(3, auto);
@@ -28,18 +39,9 @@ body{
 }
 
 
-@media screen and (min-width: 550px){
-    body{
-        grid-template-areas:
-                "nav header      header      header"
-                "nav calendar    calendar    auto"
-                "nav ingredients ingredients auto"
-                "nav footer     footer  footer";
-    }
-}
-
 #ingredients_area {
     grid-area: ingredients;
+    margin-bottom: 10%;
 }
 
 #ingredients {
@@ -56,7 +58,6 @@ body{
 }
 
 
-
 .life_bar_track {
     background-color: transparent;
     padding-top: 10px;
@@ -68,8 +69,6 @@ body{
     grid-template-columns: 20% auto 10%;
     grid-template-areas: "left mid right";
     background: rgb(227,233,221);
-
-
 }
 
 #calendar{
@@ -108,6 +107,7 @@ body{
 
 .len_handler {
     width:10%;
+    text-align: center;
 }
 
 
@@ -115,46 +115,6 @@ body{
     text-align: center;
 }
 
-/*.search {*/
-    /*grid-area: search;*/
-    /*display:grid;*/
-    /*grid-template-rows:100px auto;*/
-    /*grid-template-areas:*/
-            /*"search_bar"*/
-            /*"search_result";*/
-
-/*}*/
-
-/*!* search area *!*/
-/*.search_bar{*/
-    /*margin-left: 4em;*/
-    /*grid-area: search_bar;*/
-    /*width: 80%;*/
-/*}*/
-
- /*!*Style the search field *!*/
-/*.search_bar input[type=text] {*/
-    /*padding: 10px;*/
-    /*font-size: 17px;*/
-    /*border: 2px solid grey;*/
-    /*float: left;*/
-    /*width: 80%;*/
-    /*background: rgb(253, 255, 246);*/
-
-/*}*/
-
-/*!* Clear floats *!*/
-/*.search_bar::after {*/
-    /*content: "";*/
-    /*clear: both;*/
-    /*display: table;*/
-/*}*/
-
-/*!* search result *!*/
-/*.search_result {*/
-    /*grid-area: search_result;*/
-    /*margin-left: 4em;*/
-/*}*/
 
 
 /* button */
@@ -166,6 +126,8 @@ button {
     background: #307528;
     text-decoration: none;
     font-weight: bold;
+    font: inherit;
+
 }
 
 button:hover {
@@ -178,6 +140,13 @@ button:hover {
     text-decoration: none;
 }
 
+.w3-green{
+    background: #50AE54;
+}
+
+.w3-red{
+    background: #FC363B;
+}
 
 .w3-green:hover {
     background: #4f8952;
@@ -199,6 +168,6 @@ button:hover {
     text-decoration: none;
 }
 
-h1 {
-    grid-area: header;
+*, *:before, *:after {
+    box-sizing: inherit;
 }
