--- a/public/styles/plan.css
+++ b/public/styles/plan.css
@@ -2,10 +2,10 @@
 body{
     display: grid;
     grid-template-areas:
-            " header      header      header"
-            " plan       plan       meals"
-            " plan       plan       meals"
-            " footer     footer  footer";
+            "nav    header      header      header"
+            "nav    plan       plan       meals"
+            "nav    plan       plan       meals"
+            "nav    footer     footer  footer";
 }
 
 
@@ -19,26 +19,6 @@ body{
     }
 }
 
-
-button{
-    border-radius: 5px;
-    display: inline-block;
-    color: rgb(118,144,76);
-    background-color: rgb(243,243,245);
-    text-decoration: none;
-    border: solid;
-    border-width: 1px;
-    width: 198px;
-    text-align: center;
-    height: 4em;
-
-}
-
-
-button:hover{
-    background-color: rgb(183,206,164);
-}
-
 #plan{
     grid-area: plan;
     display: grid;
@@ -47,7 +27,11 @@ button:hover{
     grid-template-rows: 4em auto;
     grid-row-gap: 1em;
     padding: 0;
+
 }
+
+
+
 
 @media screen and (min-width: 1200px){
     #plan{
@@ -80,6 +64,17 @@ button:hover{
     margin: 1em;
     padding: 1em;
     border-radius: 25px;
+
+
+
+    /*min-width: 20em;*/
+    /*max-height: 60%;*/
+    /*display: grid;*/
+    /*grid-template-columns: auto 4em;*/
+    /*grid-template-rows: 2em 2em auto 2em;*/
+    /*line-height: 2em;*/
+
+    /*overflow: scroll;*/
 }
 
 #meals h2{
@@ -165,3 +160,22 @@ button:hover{
     text-align: center;
 }
 
+
+button{
+    border-radius: 5px;
+    display: inline-block;
+    color: rgb(118,144,76);
+    background-color: rgb(243,243,245);
+    text-decoration: none;
+    border: solid;
+    border-width: 1px;
+    width: 198px;
+    text-align: center;
+    height: 4em;
+
+}
+
+
+button:hover{
+    background-color: rgb(183,206,164);
+}
