--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Basket | MealMaster</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
     <!-- Load icon library for search bar -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -46,7 +44,7 @@
 
     <div id="ingredients_area">
         <table id="ingredients">
-            <tr><td>Ingredients</td><td>Time before expiry</td><td></td></tr>
+            <tr><td>Ingredients</td><td>Time before Expiry</td><td>Adjust<br/>Shelf Life</td></tr>
             <tr></tr>
         </table>
     </div>
