--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login | MealMaster</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/styles/login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="public/scripts/login.js"> </script>
@@ -11,8 +12,12 @@
 <body>
 
 <form method="post">
+
     <h1>MealMaster</h1>
+    <div class="message"></div>
+
     <label>email: </label>
+
     <input type="text" name="email" id="email"/>
     <label>password: </label>
     <input type="password" name="password" id="password"/>
