login & signup messages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,10 +14,9 @@
 <form method="post">
 
     <h1>MealMaster</h1>
-
-    <%- messages('message', locals) %>
-
-    <div class="message"></div>
+    <div class="messages">
+        <%- messages('message', locals) %>
+    </div>
 
 
 
