add shoppingcart to all meals & all ingredients page

--- a/public/styles/items.css
+++ b/public/styles/items.css
@@ -4,7 +4,7 @@
     grid-template-rows:auto;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
-    grid-template-areas: "nav nav"
+    grid-template-areas: "nav shoppinglist"
     "filter main"
     "page page"
     "footer footer";
@@ -17,6 +17,10 @@
         "footer footer";
     }
 }
+img:hover {
+    opacity: 0.6;
+}
+
 .nav {
     grid-area: nav;
     background-color: rgba(226, 147, 91, 0.81);
@@ -140,6 +144,123 @@ p{
     cursor:default;
     color: #bbbbbb;
 }
+.sidebar{
+    height:100%;
+    width:500px;
+    background-color:#fff;
+    position:fixed!important;
+    z-index:1;
+    overflow:auto
+}
+
+.animate-right{
+    position:relative;
+    animation:animateright 0.4s
+}
+
+@keyframes animateright{
+    from{right:-300px;opacity:0}
+    to{right:0;opacity:1}
+}
+
+.cart{
+    color:#fff!important;
+    background-color:rgba(226, 147, 91, 0.81)!important
+}
+
+.button:hover{
+    color:#000!important;
+    background-color:#ccc!important
+}
+
+.xlarge{
+    font-size:24px!important
+}
+
+.bar-block .bar-item{
+    width:100%;
+    display:block;
+    padding:8px 16px;
+    text-align:left;
+    border:none;
+    white-space:normal;
+    float:none;
+    outline:0
+}
+.card{
+    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)
+}
+.right{
+    float:right
+}
+
+#shoppingList{
+    grid-area: list;
+    background-color: rgb(209,218,203);
+    min-width: 20em;
+    max-height: 100%;
+    display: grid;
+    grid-template-columns: auto 4em;
+    grid-template-rows: 2em 2em auto 2em;
+    line-height: 2em;
+    margin: 1em;
+    padding: 1em;
+    border-radius: 25px;
+    overflow: scroll;
+}
+
+#shoppingList h2{
+    margin: 0;
+}
+
+#shoppingList ul{
+    list-style-type: none;
+    padding: 0;
+    grid-column: span 2;
+}
+
+#shoppingList li{
+    height: 2em;
+    line-height: 2em;
+}
+
+.shopping_list_item{
+    display: inline;
+    margin-left: 5px;
+    size: 2em;
+    height: 2em;
+}
+
+#shoppingList li .expand{
+    float: right;
+    top: 50%;
+}
+#shoppingList li .fold{
+    float: right;
+    top: 50%;
+}
+
+#shoppingList li .remove{
+    float: left;
+    top: 50%;
+}
+
+#shoppingList #go-shopping{
+    grid-column: 1/span 2;
+    border-radius: 5px;
+    display: inline-block;
+    color: rgb(118,144,76);
+    background-color: rgb(243,243,245);
+    text-decoration: none;
+    border: none;
+    text-align: center;
+
+}
+
+#shoppingList #go-shopping:hover{
+    background-color: rgb(183,206,164);
+}
+
 .footer {
     grid-area: footer;
 }
