--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -33,18 +33,16 @@
 
     <h1>My Basket</h1>
 
-    <div id="calendar_area">
-        <div class="week">Week
-        </div>
-        <table id="calendar">
-            <tr>
-            </tr>
-        </table>
-    </div>
 
     <div id="ingredients_area">
         <table id="ingredients">
-            <tr><td>Ingredients</td><td>Time before Expiry</td><td>Adjust<br/>Shelf Life</td></tr>
+            <thead>
+                <tr id="calendar">
+                    <th>Week</th>
+                </tr>
+            </thead>
+
+            <tr id="titles"><td>Ingredients</td><td colspan="7">Time before Expiry</td><td>Adjust<br/>Shelf Life</td></tr>
             <tr></tr>
         </table>
     </div>
