--- a/views/plan.ejs
+++ b/views/plan.ejs
@@ -41,6 +41,7 @@
     <button id="autofill-plan" onclick="addAll()"><< Autofill</button>
 </aside>
 <footer>
+    <%- include('./footer.ejs'); %>
 </footer>
 
 </body>
