--- a/public/styles/plan.css
+++ b/public/styles/plan.css
@@ -6,6 +6,7 @@ body{
             "nav    plan       plan       meals"
             "nav    plan       plan       meals"
             "nav    footer     footer  footer";
+    grid-template-columns: 1fr 1.5fr 1.5fr 1.5fr;
 }
 
 
@@ -16,6 +17,7 @@ body{
                 "nav plan       plan      meals"
                 "nav plan       plan      meals"
                 "nav footer     footer  footer";
+        grid-template-columns: 1fr 1.5fr 1.5fr 1.5fr;
     }
 }
 
@@ -64,17 +66,6 @@ body{
     margin: 1em;
     padding: 1em;
     border-radius: 25px;
-
-
-
-    /*min-width: 20em;*/
-    /*max-height: 60%;*/
-    /*display: grid;*/
-    /*grid-template-columns: auto 4em;*/
-    /*grid-template-rows: 2em 2em auto 2em;*/
-    /*line-height: 2em;*/
-
-    /*overflow: scroll;*/
 }
 
 #meals h2{
