--- a/views/shoppinglist.ejs
+++ b/views/shoppinglist.ejs
@@ -26,7 +26,7 @@
         <a class='button' href="home">< Back</a>
         <!--<a href="plan">Finished</a>-->
         <!-- need to change the style!! -->
-        <input class='button' type="submit" value="Finished">
+        <input class='button' type="submit" value="Finished > ">
     </form>
 
 
