--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -38,12 +38,17 @@
         <table id="ingredients">
             <thead>
                 <tr id="calendar">
-                    <th>Week</th>
+                    <th><div><br>Week<br></div></th>
                 </tr>
             </thead>
+            <tbody>
+                <tr></tr>
 
-            <tr id="titles"><td>Ingredients</td><td colspan="7">Time before Expiry</td><td>Adjust<br/>Shelf Life</td></tr>
-            <tr></tr>
+                <tr id="titles"><td>Ingredients</td><td colspan="7">Time before Expiry</td><td>Adjust<br/>Shelf Life</td></tr>
+                <tr></tr>
+
+            </tbody>
+
         </table>
     </div>
 
