--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
     <label>password: </label>
     <input type="password" name="password" id="password"/>
     <input onclick="login()" type="button" value="Enter" class="button"/>
-    <a href="/">Not yet a member?</a>
+    <a href="/signup">Not yet a member?</a>
 
 </form>
 
