--- a/public/styles/basket.css
+++ b/public/styles/basket.css
@@ -5,7 +5,7 @@ body{
                     "nav ingredients ingredients ingredients"
                     "nav footer footer footer";
     grid-template-columns: 1fr 1.5fr 1.5fr 1.5fr;
-    grid-template-rows: 30% 70% auto;
+    grid-template-rows: 40% 120% auto;
 
 }
 
@@ -41,7 +41,7 @@ body{
 
 #ingredients_area {
     grid-area: ingredients;
-    margin-right: 10%;
+    margin-right: 5%;
     overflow-y: auto;
 }
 
@@ -66,6 +66,10 @@ th div {
     width: inherit;
     background-color: rgb(227,233,221);
 
+}
+
+td:first-child{
+    padding-left:2em;
 }
 
 .life_bar_track {
